--- a/TOS_WF/TOS_WF/Properties/Resources.resx
+++ b/TOS_WF/TOS_WF/Properties/Resources.resx
@@ -121,16 +121,19 @@
   <data name="anime-bg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\static\anime-bg.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="186513533nhungkevocam" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\poster\186513533nhungkevocam.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="pinky" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\static\pinky.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bg-red" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\static\bg-red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="186513533nhungkevocam" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\poster\186513533nhungkevocam.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="do-nhat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\static\do-nhat.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="bg-red" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\images\static\bg-red.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\static\Background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
