--- a/TOS_WF/TOS_WF/Main.resx
+++ b/TOS_WF/TOS_WF/Main.resx
@@ -1291,4 +1291,112 @@
         oooAKKKKACiiigAooooA/9k=
 </value>
   </data>
+  <data name="btnLogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAFkAAAAgCAYAAAB5JtSmAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5AsPAQgJ3nWK6AAAF6JJREFU
+        aEPtWXdYVMfXXukI1th7Yk9UIpZobKixxxaNRmNPYpcqooINEMWoKIrSO4ogSIdld+lVUBApFgQBUWJB
+        xIYovt+ZuXcFf8kf3//J7PM+086dmfveM+ecmZX8f9P7xloJUKcSpsjsZHE28Btjp8CV6+29di2wPL/h
+        jzNBK/a6h8y3cQvqn5yap8nkAfDn/kv/j2QdGCVR5BfpbjtzYebsA64OE239cvSPBD8c6RD5Vu9MbNPw
+        MzHvvz0T3ah/8srrUYcDSicd8AlbftTffLfTxSFPy4pV09IzxZH+S39Lp3xDJJHxiZpbHQOWz7DzlX17
+        POS1nnc6xkfdwszECixMfYAlqdVYklKNxSkPMDepCgayMowJKcBwZ8VHfZuLlXMOujvs8wgZyLQ6M1Uu
+        jvxfkihiQiWbveMlxy/F9Jpn7eGkdzTo5cjAa5hNJK5Ke4h1ikqsvHIX8/0L8YP7DUx1zcdUtxuY41OI
+        hcF38FNcBRYkPcREaRmGuSdirLXfnZ+tPdddCA7XPOkTIs7yL061je8kEr0Fkt0uF4ZPOOCePMxZgakJ
+        5VidXo11UeWYSYQOOpyOjnsSoL1TDnVTJRKgZa5A+90J6Gedhu/OXseckDuYm1CNseHFGH409NUye79T
+        niFR7U4ExUj+tdZakZcv0Z26SWLq4DXy+wOeucN80zA/7QF+l1VhjlsBeh5MhbqZAq2MZZAYKyAxUUIO
+        iakMrViZ2lsZM9Jl+MIqGfpE9szoMkwgM/KNQ0TjDMvznjvPhcwxOx8+nfADg+n/wOwcQwT1KSHI7XSO
+        4PhU5zmrR/5g5qwEk6F25zAxp36X5n72vHkL7KK2XdRvLkJZ3+UaJcA5murR1Ec5b6Pn3KjfLYpyqrtR
+        u3vMD+Yi9nhEGlieufBlRk6exlmvi587fyBbcsArVuIUktBr6iHvtOFkexelP8Aa0l69E1nQNpdBhZHL
+        SU0gQhMEcsW6xJRy0mZGNCeb5cYJ0KCP0oc0f3LwbXwvK8dEj6SPazzj323wkjf8E9a3wDpvAuVrW2CN
+        iNVeMo5VhJWe8k9Y4Slr+EXEco/4hp89ZA1LPeQNS9xlDT+JWORGcJU1LCT8SJhHmEOY5SJtmOUc3zCD
+        MN1Z2jCN8qnnZA0GTvENUwiTnOIavneKbRhP+XdnYxvGnhEw2jGmYZQICgbejLa9ULHosLfnfq/IIZJJ
+        G5qJjsgplOBNvfoCW8+zw8/J8GPqQ6yKKsWQI2lQE8kUyBMIFrSW2o0Y4rn2SshsMChJVkKF2roeTMLY
+        wFuYn/EIFrfqsP9uPaxu1xFewPJ2PfbcegGLkjreZ17yHKbFtTApfg6jolpsL3yGbYQtBc+w6cZTjt/z
+        n2B93mOsy3uC1dcf49drf2ElYXluDX7OqcHSnL+wOLsGC7MfYQFhXtZDzMl8xDEj4yGmM6Q/gkFaNaYQ
+        JhEmkPOekFKF8YTvkqswluqjkwnki0YR9BMrMZLwLUEvoQIjRAxXVGAY+SmGb+SVGBpbiqHuyZhk7X99
+        r9uVkT9ZuQokz7Q4J/nZymna19aBtROiS/FrbDmG22dwglWYCeAmIYkTyGEkRdc9Mkw8mYoZjmkYckgB
+        DZNYkVim2aT1IloRVAmdDqVBP+g2RsSWYWj0XQyheYa2BH1UhiHUNzj6DoHJNJcHUZ8AVr6LgVTmoGcH
+        UF0AKzPcE0B9/Vl/NCuX8fpXHPeonaFlvyDfLPtPUD6nlG+W7R8jlAdFl2NwTBn0vDKw6Kh/ZHjytXaS
+        w56XJUGBQVqjjM4EDj6fgsUx9zGRbKmmGWklJ1ipvYKWqhtLMe9cBhLvPcGThnd41vget569wv7om+i0
+        i4hmZkWp1RwJpM0KqJHp6HE0A0Mu3UG/oFvoTYT34bmAPpcEsHahT+jvE1QigPVzWVYXygKUskr5z8HH
+        /hv+R/7T3M39fan+v1DKtyw3owS9goW1sfWPuHwbMx1j6rec8p8rWWXnJ9n8p//UQZYBL8ZcKMKPF0rQ
+        ea9gc4WtL5gHFVYnAqeeTMSd2tcoeVKPgzGFMAq+hqiiatS9/wDr2CJomsYRsfRxlGDOkn0wgqZFIno4
+        XkNv7yJ0I3T3LkR3n5sCqNzNPR9dnHPQxeUaunkWoIc3a/87WLsAep6D2j+N06Isjqucp1uL9m4Ucir7
+        eJnLihBlengXfGr7tBaS5WVaX3fq/3yN1CaOM8CvCHM90rHxVIA9GYsBkh/2uBzuYxuN6YF3oH/yKlRN
+        lE5OCUY6hW1kEtyzyvDg5VvMOp0EFcNosskx6LknBmEFVbhX9wYj7EiL6XlGqgoDhXoqOxVQNU/gaL0/
+        BZ1pp3RyzkPn8wxUpryTUy667LuCyUfCMON0LEZ7XRX6SI71dz6fL8gxfGrLwxfO+ejofANfnL9BbUyG
+        4Cw+R/iCy+aLc4n9XEbsU4K3N8/zqU+cg+Vd2HpOZaHN3jD0PRyDPq7X0OmcMB4bn8kox+rtlo/ZHhlY
+        Y+/nLomIT2qnb+6R3Pd4EmZ4F6Pb/mQiiRHVgmQWPVBbl91S5FTVIpI0V9csVjAHRKSEbPTvflfxnLR5
+        sVsmycZ/RqzqrkSoMVgkQW13ItrYZ6H9qZxPaHfqKtr+mY7R1pdxu+Y56t+9w/GscnQ4mUV9TOYqOlDe
+        wSEHHXl+Fe1Zn0MWb2vvcI3LdWByDrnUl03PkgwrM1mO5vmYTAcuQ6AyG7Pd6Wuf1sJkm8dj4wtjtDuW
+        ji5GftjgGI7LN8sxyYfkPq3xc/Q4m4uZLmlYfdTPQ2LhFDp4iIlP5UD6Qt/Tl9A2b0mw0rYyzZaju5Uc
+        +TX1CMyrhJZZjGgGSI7s9C+eWahrbKQ8m8ur7hLI5SByVXcTwXuSoL43CW1s0tD2GGkERybPdWzTMPZQ
+        CGpevKaoBzibfR/tjqRDV5RrSx+m7dFMtLaUoo3hBfQyu4i+e0LRaV8M2h5O4f26dqnQMQ1FV+OL6G0V
+        hg57wtDe5CI6WZDckSS0s6fx9sugYxSIbqYX0Hd3MLpaRUHXNoXmyYSuZRw6mF5CF1Fe96AcbU1D0Gln
+        MDofkqO1cRCWHruE+oYGPHnTQDtOig529Kw9e4ds8X0ItJauJ7Lxw7lUgWSjM6Fz+pj41w8+lYthJ65S
+        RCGaCtF5CRECI55IphfMI5ID8ivJMUYJGi6SvMwrC7XkBFcwks2IZLK/jNiW5KpbJkObzEUXIqudXTpa
+        22ZwaB/OhPYBOoIfCMIjkWTHjDLoWpP8YUFG1yYdmiZXMMzEA2dispB99wHy79fgcm4plnilosNBMmdb
+        A7D8WDAUBfeQe/8vOMZkwyEiE7KiKmyPKEBr80j03uoG60uJSL1VifyKGsQVlGFTYDa6WCegi/ElOEmv
+        c/nfrhTQxwzELj8F5EWVsIkrxDhLf2TcqcKHj014S7s2694j/HopH9rWKWhN79CarZWgTevtRE5+umMy
+        Vh/x95BsPBWyoqfJxcaBtL2+ssske6zUXgbRcVFZd5cco4/IUfzXC4QXVmHQgVj0O6ggyNFvnxTbAq/i
+        BZG8nfLOpC0au5OJ2FSoWaZAwyoFmvsoP5CKNnTs7k9bsyNpruaBFrBUYMy+S6TJrzjJp9PKoGOVCC16
+        hoNCxn7bXJF4swxN1H/rcT2yymvQ2NSEypdvMP98IvRMPXG35hl/vrz2JYrI9Lyh3cXSqaRb6PiHK7zl
+        1+j5j3hAHzOl9BFekWmqo3XvCM1HX2M/5NGHY8kusQRttvojIDGP18MLqzHzRDRuP65FE5Hc2PQBFS/e
+        YGNoATT2JUHzYBo0lKD1trdNxVSHRKw6Qpq8+ujFFd2NLjT2IxXvRQSwcIuFXQLBzByQ4zKRYiN9sZIn
+        L/C28QNq3zagmF7gJr1oEUUZhTUvUPn8Fd7TxA+IpAvkBLsfSoQ6I5ZsvBaRqHUoHdqkjZ0o/tZ3uYkv
+        DtEx3Yq0m47f6vQR1C1kGGN1iTRZINkxtRTaeylkZB+I5FSNIrHGMYqTWvPqDeacS0F/i4tILrnP5d2S
+        C7H+dAh/+advGrHYNRXfWwfjXk0t7z8RX4DJpIl/vXyNNx8+kPaSoyUz4J10k/cn3nuM4eY+yCl/xOs2
+        CUXQ2ewLP5HksOJH6Lo7HFtcotHQ9B6P37zFUvcUvoM0SBk0aJeyncqgRmh7MBkGJxOwys7XR2LiHLmi
+        l2FAY2/bTPSwTucnNCXBzHlxmMbDVlrMJ/vIfx8ITUi+9xd8skvJUb0Xe5iOAdfpA/Q9mkAamg4ta7Z9
+        0qFjlwGdIxn40jEHBj7FaEfkMyeoJpoT1Z3xGG3ZTPJpWQG0NwVAY8slaGwNpjwQ5v7JvK/kSR0GHIyF
+        1noPXEwRSAi9fg/bzkegkbTsAWmY/sFwdPnNCTml1bz/hLQAC+3D8Io0+9mbdzA4lQjJb/7YF5DI+/Me
+        1mLMbj/kiiTbxeVBZ9VZBCbn83p40UO0MQ7DshOheEckP3rdgHF/SiHZRQ5+D73LHnoXEaoE3f2JmHJc
+        gVWHvS9ItjtcMOi11et51/2p6Ekkq7YgVxkdqJlJYS2SzMn8+JG/jGFwLvTsInHraR010yakdpauEclf
+        /plEtpQczRFyCsxp/Ume/HgmRlF8PMO/mGupmrkQdTDnqELxtf5eRrJgk2/Qy7rG5cKFbKSL/AZ2kN1c
+        7iRFPW3t52/fYd25WEw098DN+w+5/FFZCSbbRuBh/Wuu7d6K6zgdloY62nUsnZAXY9T+K7hPZqSR1nno
+        cjr0DJ0RnXub94fefICBJv64WsrGa0L8jVL84RCEuw+f8P4rhY+ga3wFP50Mx7sPbA0NWOUcj25WMvEd
+        iC8L4ouBnH4bywRM+VOBNUcDPCVe8pyBembeFe12yUiTM6BOAiotXp45MDVzGWzib/HJGMlNosb6XL+P
+        NQGZZIs/kJ0i8FYi+a/nGOBA9pc8bbvjLEzKRvvTuejhlIOF4WWY6HED6uzSaSfNJX7QVsbxGLXvMmrq
+        34ijfJ5iSmrQZ08EnNPv0nanl3z9FjV1L/GOPm7q/af41k6B1jtCYRmShSr6UOxwlHvvAaqYAlA6kXAL
+        OsbhsIzIR+27RrwkVNfWk1Z+JCV5iTlOadDZEQa31Nv0hozmJjIJb1BGu4al8MKH0DGLwHd20fxDsnd9
+        Qv1bL+fTzv/8XVhZl3bppGNyrD0e7CSpfnxf12Cvd7yOYTg60fbWZupO5Koxctl2ZpEB2UsbmUAyNxf0
+        YmwZ3tm3yeGlkQ0kbSHtEBUZ1x/XYfDZdB4vdjxzHV+coyDe5Tr0/IvwR0I1Bh/PIs1lBxbx0MKiF0Iv
+        KyksIgvJkxfDVsTh2GLYSUuwKiCPwsY4dKKDz1r/HJxJK4dr1n2Yh9/EUBuKZgyj0HV7AH62D4aJexSW
+        nQqDvtF5XCut4muyl5dAxTgWbczj8JNrBk4mlcI9uwL7afwxdEZQI7/TisziYGsZ7dpbcM4sx1rfLCym
+        MOwwm9+XXTXEofXOWKz1ox1G/U4Z5RSmZXKfpfRfSuiQRk8+JsO640FOEonBbslyWx+Tjlv8oUuE6lgy
+        GymSK4ZdGrS1beXNmvwR77mHfcHuLojgRnIkTZxkgeU8cpDfuGbxk1IXNzrCet7El343sUxeiTXSSrSn
+        Y7sKOxWK9p/7AbY4llM42MooDioElqvyMrWRpqtQaMkvq+h4z+5Q2KUUa29Fhx8WRjI7fJu0kjk3FkWc
+        DU/jMW09afVK72wuw65kJfSMqnEc1E3ioGbExmBrYQ6fjU9mjOTUGXGUs3WqkAy76lWuVYXaNU1iaA3U
+        TnN/Wrs4BlMY9o6zHBT44+QlJ8kh/3jJn4Gyr4fu8KhSN6QH6eDAiSWvrwy7NPYn4YDiDhoZvURkI2kx
+        s8mNZCKEspgTPhDJ2U9fYITvNX630CugGH0vlWBK7D2Y5z3FWNc8ChMZMbQoDlqUmLfiMboQkzeD9Qvk
+        clket7d8XgkZWpvGwCQkD7nVz1H+ogH36xtwvboOltGF6EAazMlkH5fNQ0QI9+BsbPpINCa7DhDaRYjj
+        8jn5c6xNuNf5tC6S+0SwuE6mBP0Pp2Oxo6Lpj2N+ppKYrOvsYlll7l6XE7qbA8jxKShkSoHWQYpND6Xx
+        sEvHJhWjnbOxmbby1qgibI0pxrbYEmynbbVDdhuG8tswSrwD4+S7ME0twyp5KfpfKkSfy7fxZdgdjI0v
+        hcnN51inqEI72hV8kUyjGPhihRcSyBTQ8kWESyolEltAuFNp7mO3hHHouTcew2wUGG6bgJ50SmUaK4yp
+        nE+A8hkByj5hzL9D+VzzWiXGQrvyI3M5Y9JiCwUWuN/AUvsrVTa+Mfr8PtnKK0JyxD9i4DBDtyK17ZFQ
+        J1usY0MhF4VdunQ6a8uPjSxCoJPaCXbvcJVsbQ7Z2lx0Jlvb1T0f3b1voKf/TfQOLELfECI36h4Gx1Rg
+        XEIlthQ+g8X1Wgygsz//+4ot8BPBLSBqg1BXvkxLIv4J7AUZmtv4c2wePhdtd6qrECHNskpQH2kwNwlM
+        hjSS+QqhLtyDfwaSYXfsarwu52BlNcrZf53sf8++B1OwmBz7stOxTWvtvGyYAnOSPzR9lEj0/pCsPRa4
+        sucWr1eqhnHQskrl9wvt6AzOLkk6OOaiIzmwzudvkJ29we1sd98i9LpQzO9Q+4bewVeR9zAgthyD4yvw
+        taICk1IfYHvRc1iSFo9yugYN4xhoGsVAyyiaQ4fsmi5t8ZZoaxpLW1sqIo7nHSnvbBFPh4HP0X1PPHpb
+        ytHbSiGAl2Xou1+Br+iYztD/QAKBcjo0DLZJwlDbZHKUBDqyD7VOwrDDydA7ksIxQsS3hFHswqoFxhDG
+        ncjAxJNZmOiQiQkOVCZMckjH1NNZdITOxrzz2Vjhmomlx8KeL7d2P+F2JbrD8YBwzjFP4VcLJNXPazSX
+        2vqd6LrJp0mFnIP2gRR0pNCrs3MeurjeQFcitofPTfSiKKFPYDH6kcZ+Fc7+TSjDICJ2CBE7lDRXP7GC
+        /+Vjzv5Ouv4MIyl0a739CvobetcO2+6S2n/DKemA305Jh2w8I/96s6N82GbHhKGbTscP3Xha+vUmR+nw
+        rU7xw7cRtp5lZemIbWfjR+44Jx+547xUvwVGEcYaOf8N44ydpeONXaTjTNyixpm5h40zJZh5hE8wdY2d
+        aOoqFeAinWziLJ1i6hxnYOYaNYUweadLDMMUgsFO1ygDc7fIKSKoHjPV3C16mrl75DSqU5ngynNWn7bb
+        68ocK6/wVUcC3NYecpkWnJCtfi40QWS3RTofmSIJTcrqMNvC5XTXzV7vVQ1J4/j9bz56+ZaQKShBv2DS
+        2Cvsr557GBRHWisnchMq8E3ifegnlWNaxgP8VvAUlrdeYD1FEwPsKSzcehlDDT0emriGL78c5KOzZtli
+        rQ2rftHa/Pt67Y2/rdXevm1T6w1rVmqv/mWJ1qplS7RWr/hZ69dlS7VWLFlMWKS1ZuUv2uvXrtZeumiB
+        1pLFLUD1xQvmE34UMY9j4fy5WvN/nKM1b9Z0jUWzZ6otnEOY/YPa3NkzNefOma01d66AeXNnac2ZNUNr
+        yvfj1CeP/059msEUjelTDTSnESZ+P15j/Jix6koYTJ6iMXnSJI0xY8aoM3w3WsBYwpjRo9UnTjJQNd5h
+        rHa7pISbBzITnNN/TPY+oRKfsOh2v9h42n652a1OY+sVOpgo0J5ObH3oODwwshxfy6qgl/QAo1MqMT61
+        ClMzqrEo9zF+v1ELE8KGxGoeRbS3kKLt5kDoGbvlbT7pP50mblX++qU40788HTvnIvEN8NLYctxvHm3J
+        lM6bfd+rbQuDGp1m2hxOQ09ydsOD7mByVDnmSquwKL4SCyJKMcW3GIPo6Nx2Vxx0tlxC7y3udbOsfJxP
+        hycNnmx4SnL32XNxhv8ST1ed1knMoqolTpelndfaX9w43tw7vcdmr3rdzRc/am4LgaZxJD/9tDGPha5Z
+        DFobRhCxQfhik++H/ts9qwz2eHjtPBe0wNHZXcPq2Blx1P/SPyZmWxiCZOmdfz/mO2v+fk/7CWbOid9u
+        d6oYY+79YYyFP0aauL/UN3YtmrXXPXadvb+5tVfUiOLyCvWU/GJxlH9zkkj+D0qAxQObc1asAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
 </root>
